# Kairos-Pomodoro

./: .gitignore  LICENSE  PRIVACY.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
e2e/: backup.spec.ts  helpers.ts  journal.spec.ts  navigation.spec.ts  settings.spec.ts  tasks.spec.ts  tauri-mock.js  theme-switch.spec.ts  time-block.spec.ts  timer.spec.ts
e2e/mocks/: api-mock.ts  db-mock.ts  event-mock.ts  notification-plugin-mock.ts  notifications-mock.ts  tauri-mock.ts
scripts/: sync-versions.js
src/: main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: dnd.rs  hotkey.rs  menubar.rs  mod.rs
src/app/: app.tsx  providers.tsx  router.tsx
src/base/: active-task-card.tsx  add-task-modal.tsx  analytics-category-breakdown.tsx  badge-card.tsx  focus-summary-bar.tsx  session-card.tsx  session-stats-cards.tsx  slider-field.tsx  stat-card.tsx  task-card.tsx  task-item.tsx  timer-display.tsx  top-category-badge.tsx
src/components/: intention-selector.tsx  task-selector.tsx
src/containers/: analytics.tsx  mini-timer.tsx  settings-panel.tsx  tasks-list.tsx  timer-controls.tsx  today-focus.tsx  today-sessions.tsx
src/hooks/: use-escape-close.ts
src/lib/: backup.ts  db.ts  (+10 more)
(+124 files in other folders)
